Connection to first OAuth step

--- a/pages/back.html
+++ b/pages/back.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
 		<script type="text/javascript" src="../scripts/back.js"></script>
+		<script type="text/javascript" src="../scripts/jquery.min.js"></script>
 	</head>
 </html>
